<resources>
    <string name="app_name">DZ1</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="hint_1">Enter username</string>
    <string name="hint_2">Enter password</string>
    <string name="button_1">Login</string>
    <string name="button_2">Login</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="back_button">Back</string>
</resources>
